//
// Copyright 2018, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.core;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.core";
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "ActorContextProto";

import "google/protobuf/timestamp.proto";

import "spine/core/user_id.proto";
import "spine/core/tenant_id.proto";
import "spine/time/zone.proto";
import "spine/ui/language.proto";

// Service metadata for the requests generated by the user.
message ActorContext {

    // The ID of a tenant in a multi-tenant application.
    //
    // This field is not populated in single-tenant applications.
    //
    TenantId tenant_id = 1;

    // The user who created the request.
    UserId actor = 2 [(required) = true];

    // The time when the request was created.
    google.protobuf.Timestamp timestamp = 3 [(required) = true];

    // The zone offset from which the request is made.
    time.ZoneOffset zone_offset = 4 [(required) = true];

    // The human language in which the response is expected.
    //
    // If this attribute is not defined, or the specified language is not supported
    // the query will be returned in the default human language of the system.
    //
    ui.Language language = 5;
}
